# BE_KantongKu

./: .env.example  alembic.ini  pyproject.toml
app/: main.py  pyproject.toml
app/api/: main.py
app/api/routes/: users.py
app/api/routes/personal/: income_personal.py
app/controllers/: users_controller.py
app/controllers/personal/: income_p_controller.py
app/core/: config.py  db.py  security.py
app/core/migrations/: env.py  script.py.mako
app/core/migrations/versions/: 53909ddc12f4_add_table_income_personal.py  7ddfce2b31a8_add_table_category_income_personal.py  a73be93b4462_add_table_images_income_personal.py  e233f3b2cdde_add_table_user.py
app/helper/: validation_images.py
app/models/: __init__.py  users_model.py
app/models/personal/income/: category_p_i_model.py  images_p_i_model.py  income_p_model.py
