[tool.poetry]
name = "app"
version = "0.0.1"
description = "Money Management Application"
authors = ["RioIglesias <rioiglesias03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
sqlmodel = "^0.0.21"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
email-validator = "^2.2.0"
jwt = "^1.3.1"
passlib = "^1.7.4"
greenlet = "^3.0.3"
python-multipart = "^0.0.9"

[tool.poetry.scripts]
start = "main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
    