[tool.poetry]
name = "KantongKu"
version = "0.0.1"
description = "Money Management Application"
authors = ["RioIglesias <rioiglesias03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
